2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_expression_start):
	Slightly refactor.  Call `tok.skip_spaces()` instead of
	open-coding exactly what it does.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/column.cpp [COLUMN] (column_justify)
	(column_start, column_output, column_trim, column_reset)
	(no_vjustify, restore_vjustify):
	* src/roff/troff/div.cpp (divert, divert_append, box)
	(box_append, page_length, when_request, begin_page, no_space)
	(restore_spacing, space_request, need_space, page_number)
	(save_vertical_space, output_saved_vertical_space)
	(diversion_trap, change_trap, print_traps, mark, return_request)
	(vertical_position_traps): Mark functions `static` since they do
	not require external linkage.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/div.h: Drop unnecessary declaration of
	`begin_page()`.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.  Rename function
	`read_delimited_number()` to `read_delimited_measurement()` to
	reinforce the fact that it reads a measurement (which is, in
	turn, numeric expression potentially including operators).
	(read_delimited_number): Rename (overloaded) declarations and
	definitions from these...
	(read_delimited_measurement): ...to these.
	(token::next): Update call sites.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_expression)
	(is_valid_term): Fix code style nits.  Parenthesize formally
	complex expressions.  Arrange equality comparisons to avoid
	inadvertent lvalue assignment.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_term): Adjust wording of
	warnings in "syntax" category.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>
