@@ -51,6 +51,7 @@ groff_TESTS = \
   src/roff/groff/tests/break-zero-length-output-line-sanely.sh \
   src/roff/groff/tests/cf-request-early-does-not-fail.sh \
   src/roff/groff/tests/cf-request-works.sh \
+  src/roff/groff/tests/cflags-works-on-character-classes.sh \
   src/roff/groff/tests/check-delimiter-validity.sh \
   src/roff/groff/tests/composite-nodes-produce-approximate-output.sh \
   src/roff/groff/tests/current-language-and-environment-in-sync.sh \
