@@ -1,3 +1,11 @@
+2025-12-01  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[groff]: Regression-test Savannah #67570.
+
+	* src/roff/groff/tests/cflags-works-on-character-classes.sh: Do
+	it.
+	* src/roff/groff/groff.am (groff_TESTS): Run test.
+
 2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/number.cpp (is_valid_expression_start):
